2017-05-19  Mark Lam  <mark.lam@apple.com>

        DFG::SpeculativeJIT::pickCanTrample() is wrongly ignoring result registers.
        https://bugs.webkit.org/show_bug.cgi?id=172383
        <rdar://problem/31418651>

        Reviewed by Filip Pizlo.

        * stress/regress-172383.js: Added.

2017-05-19  Filip Pizlo  <fpizlo@apple.com>

        arrayProtoPrivateFuncConcatMemcpy needs to be down with firstArray being undecided
        https://bugs.webkit.org/show_bug.cgi?id=172369

        Reviewed by Mark Lam.

        * stress/undecided-concat.js: Added.

2017-05-19  Yusuke Suzuki  <utatane.tea@gmail.com>

        [JSC][DFG][DOMJIT] Extend CheckDOM to CheckSubClass
        https://bugs.webkit.org/show_bug.cgi?id=172098

        Reviewed by Saam Barati.

        * stress/check-sub-class.js: Added.
        (shouldBe):
        (shouldThrow):
        (calling):
        (array.forEach):
        (i.array.forEach):

2017-05-18  JF Bastien  <jfbastien@apple.com>

        WebAssembly: exports is a getter
        https://bugs.webkit.org/show_bug.cgi?id=172129

        Reviewed by Saam Barati.

        Update test to reflect new semantics.

        * wasm/js-api/test_basic_api.js:
        (const.c.in.constructorProperties.switch):

2017-05-18  Saam Barati  <sbarati@apple.com>

        Proxy's [[Get]] passes incorrect receiver
        https://bugs.webkit.org/show_bug.cgi?id=164849
        <rdar://problem/31767058>

        Reviewed by Yusuke Suzuki.

        * stress/proxy-get-set-correct-receiver.js: Added.
        (assert):
        (test):
        (test.let.target.set prop):
        (test.let.target.get prop):
        (test.get let):
        * stress/proxy-set.js:
        (let.target.get x):
        * stress/reflect-set-proxy-set.js:
        (let.target.get x):
        * stress/reflect-set-receiver-proxy-set.js:
        (let.target.get x):

2017-05-18  Filip Pizlo  <fpizlo@apple.com>

        Constructor calls set this too early